--- a/index.html
+++ b/index.html
@@ -3,133 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetSwasthya | Pet Wellness & Emergency Care in India</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        header {
-            background-color: #6A8D73;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        main {
-            padding: 20px;
-            max-width: 1200px;
-            margin: auto;
-        }
-        section {
-            margin-bottom: 40px;
-        }
-        h2 {
-            color: #6A8D73;
-            font-size: 2rem;
-            margin-bottom: 15px;
-        }
-        p {
-            font-size: 1.2rem;
-            line-height: 1.6;
-        }
-        .features, .challenges {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
-        .feature, .challenge {
-            background-color: #fff;
-            border: 1px solid #e0e0e0;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        footer p {
-            margin: 0;
-        }
-    </style>
+    <title>Petswasthya | Caring Beyond Words</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body>
-
+    <!-- Navigation -->
     <header>
-        <h1>PetSwasthya</h1>
-        <p>A Comprehensive Pet Wellness & Emergency Care Platform in India</p>
+        <nav class="navbar">
+            <div class="logo">Petswasthya</div>
+            <ul class="nav-links">
+                <li><a href="#about">Our Vision</a></li>
+                <li><a href="#services">Care Solutions</a></li>
+                <li><a href="#mission">Our Promise</a></li>
+                <li><a href="#contact">Get In Touch</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main>
-        <section>
-            <h2>About PetSwasthya</h2>
-            <p>PetSwasthya is not just a business idea—it’s a venture born out of my personal experiences as a pet owner in India, where accessing quality care for pets is often challenging, especially in semi-urban and rural areas.</p>
-            <p>What makes PetSwasthya special is its commitment to giving back. A portion of the profits will be directed toward providing essential care and support to street dogs, a cause I am deeply passionate about.</p>
-        </section>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content" data-aos="fade-up">
+            <h1>Your Pet’s Health, Our Lifelong Promise</h1>
+            <p>At Petswasthya, we believe that the bond between you and your pet is sacred. That's why we're dedicated to providing the most thoughtful, compassionate, and advanced care possible.</p>
+            <a href="#about" class="btn" data-aos="zoom-in">Explore More</a>
+        </div>
+    </section>
 
-        <section>
-            <h2>Key Features</h2>
-            <div class="features">
-                <div class="feature">
-                    <h3>Wellness Kits</h3>
-                    <p>Subscription-based kits with essential products for pet care, including grooming items, flea/tick control, and nutritional supplements.</p>
+    <!-- About Us Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2 data-aos="fade-right">Our Vision</h2>
+            <p data-aos="fade-right">Your pet's well-being is at the heart of everything we do. Petswasthya combines passion, cutting-edge veterinary science, and a deep love for animals to create a sanctuary of health and happiness for your beloved companions.</p>
+            <p data-aos="fade-right">Our care doesn't stop at treatments—we craft wellness journeys for pets, guiding them through each stage of life with health, vitality, and love.</p>
+        </div>
+    </section>
+
+    <!-- Our Promise Section -->
+    <section id="mission" class="mission">
+        <div class="container">
+            <h2 data-aos="fade-left">Our Promise</h2>
+            <p data-aos="fade-left">We are committed to the lifelong health of your pets. Through preventive care, personalized treatments, and a deep understanding of each pet's unique needs, our mission is to ensure every pet lives its best life—from playful puppy to wise elder. Your pets are more than just patients; they are family.</p>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <div class="container">
+            <h2 data-aos="fade-right">Care Solutions</h2>
+            <div class="service-items">
+                <div class="service-card" data-aos="zoom-in">
+                    <h3>Tailored Wellness Plans</h3>
+                    <p>We create personalized health and wellness plans that evolve with your pet. From nutrition to regular checkups, we ensure your pet thrives at every stage of life.</p>
                 </div>
-                <div class="feature">
-                    <h3>Emergency Services</h3>
-                    <p>A mobile app providing on-demand pet ambulances, real-time tracking, and first-aid support for pets in critical situations.</p>
+                <div class="service-card" data-aos="zoom-in">
+                    <h3>Advanced Veterinary Care</h3>
+                    <p>From preventive measures to life-saving surgeries, our expert veterinary team is here to ensure your pet receives the best care, every time.</p>
                 </div>
-                <div class="feature">
-                    <h3>In-Home Care</h3>
-                    <p>Convenient in-home vaccinations and check-ups to make regular pet care more accessible and hassle-free.</p>
+                <div class="service-card" data-aos="zoom-in">
+                    <h3>Nutrition Counseling</h3>
+                    <p>Proper nutrition is key to a healthy life. We guide you through dietary choices that keep your pet healthy, happy, and energized.</p>
+                </div>
+                <div class="service-card" data-aos="zoom-in">
+                    <h3>Pet Wellness Education</h3>
+                    <p>Our commitment doesn’t stop at clinical care. We empower you with the knowledge to care for your pets and strengthen the bond you share.</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section>
-            <h2>How PetSwasthya Works</h2>
-            <p>PetSwasthya operates on a subscription model for wellness kits and routine services, along with pay-per-use emergency services. Premium plans for ambulance services and in-home care are also available, ensuring comprehensive pet care across India.</p>
-        </section>
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container" data-aos="fade-up">
+            <h2>Get In Touch</h2>
+            <p>Have questions about your pet's health or need to book an appointment? We're here to help! Reach out and let’s ensure your pet gets the best care possible.</p>
+            <form>
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name" required>
+                
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email" required>
 
-        <section>
-            <h2>The Street Dog Initiative</h2>
-            <p>Beyond providing pet owners with organized care, PetSwasthya will give back to the community by offering essential care to street dogs. A portion of profits will be reinvested into street dog welfare to help reduce suffering, improve health outcomes, and raise awareness about animal welfare in India.</p>
-        </section>
+                <label for="message">Your Message</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
 
-        <section>
-            <h2>Challenges and Barriers</h2>
-            <div class="challenges">
-                <div class="challenge">
-                    <h3>Educating Pet Owners</h3>
-                    <p>Raising awareness about the benefits of subscription-based wellness services, particularly in semi-urban and rural regions, will require a strong marketing strategy.</p>
-                </div>
-                <div class="challenge">
-                    <h3>Logistics for Emergency Services</h3>
-                    <p>Creating a reliable emergency response network, especially in semi-urban and rural areas, will demand significant logistical efforts.</p>
-                </div>
-            </div>
-        </section>
+                <button type="submit" class="btn">Submit</button>
+            </form>
+        </div>
+    </section>
 
-        <section>
-            <h2>My Vision for PetSwasthya</h2>
-            <p>In the long term, PetSwasthya will be more than just a pet care platform—it will be a movement for improving the lives of animals in India. By offering comprehensive care for pets and supporting street dogs, I aim to redefine pet care in the country while making a lasting, positive impact on animal welfare.</p>
-        </section>
-    </main>
-
+    <!-- Footer -->
     <footer>
-        <p>© 2024 PetSwasthya. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Petswasthya. All rights reserved.</p>
+        </div>
     </footer>
 
+    <!-- AOS Library for Animations -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 1200,
+        });
+    </script>
 </body>
 </html>
