--- a/index.html
+++ b/index.html
@@ -3,108 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petswasthya | Caring Beyond Words</title>
+    <title>PetSwathya - Caring for Your Pets</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Header Section -->
     <header>
-        <nav class="navbar">
-            <div class="logo">Petswasthya</div>
-            <ul class="nav-links">
-                <li><a href="#about">Our Vision</a></li>
-                <li><a href="#services">Care Solutions</a></li>
-                <li><a href="#mission">Our Promise</a></li>
-                <li><a href="#contact">Get In Touch</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <img src="C:\Users\suhan\singhivs\images\PetSwasthya Logo.jpeg" alt="PetSwathya Logo" class="logo">
+            <h1>Welcome to PetSwathya</h1>
+            <p>Your trusted partner in pet health and wellness</p>
+        </div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content" data-aos="fade-up">
-            <h1>Your Pet’s Health, Our Lifelong Promise</h1>
-            <p>At Petswasthya, we believe that the bond between you and your pet is sacred. That's why we're dedicated to providing the most thoughtful, compassionate, and advanced care possible.</p>
-            <a href="#about" class="btn" data-aos="zoom-in">Explore More</a>
-        </div>
-    </section>
-
-    <!-- About Us Section -->
-    <section id="about" class="about">
+    <!-- Main Section -->
+    <section class="main-content">
         <div class="container">
-            <h2 data-aos="fade-right">Our Vision</h2>
-            <p data-aos="fade-right">Your pet's well-being is at the heart of everything we do. Petswasthya combines passion, cutting-edge veterinary science, and a deep love for animals to create a sanctuary of health and happiness for your beloved companions.</p>
-            <p data-aos="fade-right">Our care doesn't stop at treatments—we craft wellness journeys for pets, guiding them through each stage of life with health, vitality, and love.</p>
-        </div>
-    </section>
-
-    <!-- Our Promise Section -->
-    <section id="mission" class="mission">
-        <div class="container">
-            <h2 data-aos="fade-left">Our Promise</h2>
-            <p data-aos="fade-left">We are committed to the lifelong health of your pets. Through preventive care, personalized treatments, and a deep understanding of each pet's unique needs, our mission is to ensure every pet lives its best life—from playful puppy to wise elder. Your pets are more than just patients; they are family.</p>
+            <h2>Our Mission</h2>
+            <p>At PetSwathya, we provide top-notch healthcare services to ensure the well-being of your beloved pets. Our team of veterinarians and specialists are here to care for your pet's health as if they were our own.</p>
+            <img src="C:\Users\suhan\singhivs\images\pet1.png" alt="Happy Pet">
         </div>
     </section>
 
     <!-- Services Section -->
-    <section id="services" class="services">
+    <section class="services">
         <div class="container">
-            <h2 data-aos="fade-right">Care Solutions</h2>
-            <div class="service-items">
-                <div class="service-card" data-aos="zoom-in">
-                    <h3>Tailored Wellness Plans</h3>
-                    <p>We create personalized health and wellness plans that evolve with your pet. From nutrition to regular checkups, we ensure your pet thrives at every stage of life.</p>
+            <h2>Our Services</h2>
+            <div class="service-list">
+                <div class="service-item">
+                    <h3>Veterinary Care</h3>
+                    <p>Comprehensive checkups, vaccines, and medical care for your pets.</p>
                 </div>
-                <div class="service-card" data-aos="zoom-in">
-                    <h3>Advanced Veterinary Care</h3>
-                    <p>From preventive measures to life-saving surgeries, our expert veterinary team is here to ensure your pet receives the best care, every time.</p>
+                <div class="service-item">
+                    <h3>Grooming</h3>
+                    <p>Keep your pets looking and feeling their best with our grooming services.</p>
                 </div>
-                <div class="service-card" data-aos="zoom-in">
-                    <h3>Nutrition Counseling</h3>
-                    <p>Proper nutrition is key to a healthy life. We guide you through dietary choices that keep your pet healthy, happy, and energized.</p>
-                </div>
-                <div class="service-card" data-aos="zoom-in">
-                    <h3>Pet Wellness Education</h3>
-                    <p>Our commitment doesn’t stop at clinical care. We empower you with the knowledge to care for your pets and strengthen the bond you share.</p>
+                <div class="service-item">
+                    <h3>Pet Nutrition</h3>
+                    <p>Expert advice on pet nutrition, dietary needs, and supplements.</p>
+                    <img src="C:\Users\suhan\singhivs\images\pet2.png" alt="Happy Pet">
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <div class="container" data-aos="fade-up">
-            <h2>Get In Touch</h2>
-            <p>Have questions about your pet's health or need to book an appointment? We're here to help! Reach out and let’s ensure your pet gets the best care possible.</p>
-            <form>
-                <label for="name">Your Name</label>
-                <input type="text" id="name" name="name" required>
-                
-                <label for="email">Your Email</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Your Message</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-
-                <button type="submit" class="btn">Submit</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Petswasthya. All rights reserved.</p>
+            <p>&copy; 2024 PetSwathya | All Rights Reserved</p>
+            <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+            </ul>
         </div>
     </footer>
-
-    <!-- AOS Library for Animations -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script>
-        AOS.init({
-            duration: 1200,
-        });
-    </script>
 </body>
 </html>
