--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetSwathya - Caring for Your Pets</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- Header Section -->
     <header>
         <div class="container">
-            <img src="C:\Users\suhan\singhivs\images\PetSwasthya Logo.jpeg" alt="PetSwathya Logo" class="logo">
+            <img src="images/PetSwasthya Logo.jpeg" alt="PetSwathya Logo" class="logo">
             <h1>Welcome to PetSwathya</h1>
             <p>Your trusted partner in pet health and wellness</p>
         </div>
@@ -21,7 +25,7 @@
         <div class="container">
             <h2>Our Mission</h2>
             <p>At PetSwathya, we provide top-notch healthcare services to ensure the well-being of your beloved pets. Our team of veterinarians and specialists are here to care for your pet's health as if they were our own.</p>
-            <img src="C:\Users\suhan\singhivs\images\pet1.png" alt="Happy Pet">
+            <img src="images/pet1.png" alt="Happy Pet" class="responsive-image">
         </div>
     </section>
 
@@ -41,11 +45,47 @@
                 <div class="service-item">
                     <h3>Pet Nutrition</h3>
                     <p>Expert advice on pet nutrition, dietary needs, and supplements.</p>
-                    <img src="C:\Users\suhan\singhivs\images\pet2.png" alt="Happy Pet">
+                </div>
+            </div>
+            <img src="images/pet2.png" alt="Happy Pet" class="responsive-image">
+        </div>
+    </section>
+
+    <!-- Our Initiatives Section -->
+    <section class="initiatives">
+        <div class="container">
+            <h2>Our Initiatives</h2>
+            <p>At PetSwathya, we are committed to making a difference in the lives of street dogs. Our initiatives focus on rescue, rehabilitation, and providing medical care to ensure that every street dog receives the love and attention they deserve.</p>
+            <img src="images/street-dog-initiative.png" alt="Street Dogs Initiative" class="responsive-image">
+        </div>
+    </section>
+
+    <!-- Pet Care Tips Section -->
+    <section class="pet-care-tips">
+        <div class="container">
+            <h2>Pet Care Tips</h2>
+            <div class="tips-list">
+                <div class="tip-item">
+                    <h3>Regular Vet Visits</h3>
+                    <p>Ensure your pet has regular checkups to maintain optimal health.</p>
+                </div>
+                <div class="tip-item">
+                    <h3>Balanced Diet</h3>
+                    <p>Feed your pet a balanced diet suitable for their age and breed.</p>
+                </div>
+                <div class="tip-item">
+                    <h3>Exercise</h3>
+                    <p>Regular exercise is crucial for your pet's physical and mental well-being.</p>
+                </div>
+                <div class="tip-item">
+                    <h3>Grooming</h3>
+                    <p>Keep your pet clean and groomed to prevent health issues.</p>
                 </div>
             </div>
         </div>
     </section>
+
+    
 
     <!-- Footer Section -->
     <footer>
@@ -58,4 +98,5 @@
         </div>
     </footer>
 </body>
+
 </html>
