--- a/index.html
+++ b/index.html
@@ -1,102 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html lang="en" data-critters-container>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetSwathya - Caring for Your Pets</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-</head>
-
+  <meta charset="utf-8">
+  <title>Petswasthya</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<style>@font-face{font-family:DM Sans;font-style:italic;font-weight:100 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/dmsans/v15/rP2Fp2ywxg089UriCZa4ET-DNl0.woff2) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:DM Sans;font-style:italic;font-weight:100 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/dmsans/v15/rP2Fp2ywxg089UriCZa4Hz-D.woff2) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:DM Sans;font-style:normal;font-weight:100 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/dmsans/v15/rP2Hp2ywxg089UriCZ2IHSeH.woff2) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:DM Sans;font-style:normal;font-weight:100 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/dmsans/v15/rP2Hp2ywxg089UriCZOIHQ.woff2) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}*,:before,:after{--tw-border-spacing-x: 0;--tw-border-spacing-y: 0;--tw-translate-x: 0;--tw-translate-y: 0;--tw-rotate: 0;--tw-skew-x: 0;--tw-skew-y: 0;--tw-scale-x: 1;--tw-scale-y: 1;--tw-pan-x: ;--tw-pan-y: ;--tw-pinch-zoom: ;--tw-scroll-snap-strictness: proximity;--tw-gradient-from-position: ;--tw-gradient-via-position: ;--tw-gradient-to-position: ;--tw-ordinal: ;--tw-slashed-zero: ;--tw-numeric-figure: ;--tw-numeric-spacing: ;--tw-numeric-fraction: ;--tw-ring-inset: ;--tw-ring-offset-width: 0px;--tw-ring-offset-color: #fff;--tw-ring-color: rgb(59 130 246 / .5);--tw-ring-offset-shadow: 0 0 #0000;--tw-ring-shadow: 0 0 #0000;--tw-shadow: 0 0 #0000;--tw-shadow-colored: 0 0 #0000;--tw-blur: ;--tw-brightness: ;--tw-contrast: ;--tw-grayscale: ;--tw-hue-rotate: ;--tw-invert: ;--tw-saturate: ;--tw-sepia: ;--tw-drop-shadow: ;--tw-backdrop-blur: ;--tw-backdrop-brightness: ;--tw-backdrop-contrast: ;--tw-backdrop-grayscale: ;--tw-backdrop-hue-rotate: ;--tw-backdrop-invert: ;--tw-backdrop-opacity: ;--tw-backdrop-saturate: ;--tw-backdrop-sepia: ;--tw-contain-size: ;--tw-contain-layout: ;--tw-contain-paint: ;--tw-contain-style: }*,:before,:after{box-sizing:border-box;border-width:0;border-style:solid;border-color:#e5e7eb}:before,:after{--tw-content: ""}html{line-height:1.5;-webkit-text-size-adjust:100%;-moz-tab-size:4;tab-size:4;font-family:ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji";font-feature-settings:normal;font-variation-settings:normal;-webkit-tap-highlight-color:transparent}body{margin:0;line-height:inherit}*{font-family:DM Sans,sans-serif}
+</style><link rel="stylesheet" href="styles-GQQ2B6DO.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-GQQ2B6DO.css"></noscript><link rel="modulepreload" href="chunk-FTM4PA7A.js"><link rel="modulepreload" href="chunk-H5GDJ6RK.js"></head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <div class="container">
-            <img src="images/PetSwasthya Logo.jpeg" alt="PetSwathya Logo" class="logo">
-            <h1>Welcome to PetSwathya</h1>
-            <p>Your trusted partner in pet health and wellness</p>
-        </div>
-    </header>
-
-    <!-- Main Section -->
-    <section class="main-content">
-        <div class="container">
-            <h2>Our Mission</h2>
-            <p>At PetSwathya, we provide top-notch healthcare services to ensure the well-being of your beloved pets. Our team of veterinarians and specialists are here to care for your pet's health as if they were our own.</p>
-            <img src="images/pet1.png" alt="Happy Pet" class="responsive-image">
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section class="services">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="service-list">
-                <div class="service-item">
-                    <h3>Veterinary Care</h3>
-                    <p>Comprehensive checkups, vaccines, and medical care for your pets.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Grooming</h3>
-                    <p>Keep your pets looking and feeling their best with our grooming services.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Pet Nutrition</h3>
-                    <p>Expert advice on pet nutrition, dietary needs, and supplements.</p>
-                </div>
-            </div>
-            <img src="images/pet2.png" alt="Happy Pet" class="responsive-image">
-        </div>
-    </section>
-
-    <!-- Our Initiatives Section -->
-    <section class="initiatives">
-        <div class="container">
-            <h2>Our Initiatives</h2>
-            <p>At PetSwathya, we are committed to making a difference in the lives of street dogs. Our initiatives focus on rescue, rehabilitation, and providing medical care to ensure that every street dog receives the love and attention they deserve.</p>
-            <img src="images/street-dog-initiative.png" alt="Street Dogs Initiative" class="responsive-image">
-        </div>
-    </section>
-
-    <!-- Pet Care Tips Section -->
-    <section class="pet-care-tips">
-        <div class="container">
-            <h2>Pet Care Tips</h2>
-            <div class="tips-list">
-                <div class="tip-item">
-                    <h3>Regular Vet Visits</h3>
-                    <p>Ensure your pet has regular checkups to maintain optimal health.</p>
-                </div>
-                <div class="tip-item">
-                    <h3>Balanced Diet</h3>
-                    <p>Feed your pet a balanced diet suitable for their age and breed.</p>
-                </div>
-                <div class="tip-item">
-                    <h3>Exercise</h3>
-                    <p>Regular exercise is crucial for your pet's physical and mental well-being.</p>
-                </div>
-                <div class="tip-item">
-                    <h3>Grooming</h3>
-                    <p>Keep your pet clean and groomed to prevent health issues.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    
-
-    <!-- Footer Section -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 PetSwathya | All Rights Reserved</p>
-            <ul>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-            </ul>
-        </div>
-    </footer>
-</body>
-
+  <app-root></app-root>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-POFERTGO.js" type="module"></script></body>
 </html>
